# vietnam-ai-hackathon

./: .dockerignore  .env.example  .gitignore  BAOCAO-F3.md  CONTRACTS.md  Dockerfile  Makefile  README.md  SPEC.md  VISION.md  build_status.json  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
answer/: README.md  compiler.py  compose.py  demo.py  demo_seed.py  freshness.py  judge_calibrate.py  judge_soft.py  llm_gateway.py  pipeline.py  service.py  tiers.py  verify_hard.py
answer/calibration/: judge_calibration.json  kappa.json
api/: README.md  answer_service.py  auth.py  db.py  gate.py  integrations.py  main.py  ratify_logic.py  schemas.py  sse.py  view_models.py
api/routes/: admin_misc.py  admin_ops.py  ask.py  misc.py  nodes.py
corpus/: TRAPS.md  manifest.json
corpus/text/: blds-91-2015-qh13-trich.txt  dc-01-2026.txt  luat-32-2024-qh15-trich.txt  luat-47-2010-qh12-trich.txt  nq-01-2019-nq-hdtp.txt  qd-4033-2025-dinh-chinh.txt  shb-cs-ls-01.txt  shb-gt-468-01.txt  shb-mb-hd-01.txt  shb-qt-td-01.txt  tt-06-2023-tt-nhnn.txt  tt-08-2026-tt-nhnn.txt  tt-10-2023-tt-nhnn.txt  tt-11-2026-tt-nhnn.txt  tt-12-2024-tt-nhnn.txt  tt-22-2019-tt-nhnn-trich.txt  tt-26-2022-tt-nhnn.txt  (+7 more)
db/: init.sql
deploy/: Caddyfile  remote_deploy.sh
docs/: 00-VISION.md  01-DECISIONS.md  02-DOMAIN-SPEC.md  03-SYSTEM-SPEC.md  04-CORPUS-AND-EVAL.md  05-DEMO-DEFENSE.md
engine/: README.md  __init__.py  blast_radius.py  conflict.py  fixtures.py  fold.py  model.py  oracle_diff.py  scope.py  snapshot.py  story.py  sweep.py  windows.py
ingest/: __init__.py  alias.py  citation.py  demo.py  manifest.py  model.py  normalize.py  op_extract.py  orchestrator.py  pipeline.py  ratify.py  roles.py  surface.py  tree_parser.py
retrieval/: bm25.py  closure.py  dense.py  fuse.py  query_builder.py
tests/: test_db_triggers.py  test_llm_gateway.py  test_llm_live.py  test_schemas.py  test_smoke.py
ui/: admin_app.py  api_client.py  chat_app.py  panels.py
(+112 files in other folders)
