[project]
name = "lawstate"
version = "0.1.0"
description = "SHB LawState — máy tính hiệu lực pháp quy ba trục thời gian + tầng trả lời có kiểm chứng"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "psycopg[binary]>=3.2",
    "streamlit>=1.37",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "jsonschema>=4.22",
    "pyvis>=0.3.2",
    "rank-bm25>=0.2.2",
    "pyvi>=0.1.1",
    "numpy>=1.26",
]

[dependency-groups]
dev = [
    "hypothesis>=6.100",
    "playwright>=1.61.0",
    "pytest>=8.0",
    "respx>=0.21",
]
# BGE-M3 thật (D-40) — chỉ cài khi cần: `uv sync --group ml`; local dev dùng fake embedder
ml = [
    "sentence-transformers>=3.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "heavy: cần tài nguyên ngoài (DB/network/model) — loại khỏi `make smoke`; mỗi test heavy tự skip khi thiếu tài nguyên (vd TEST_DATABASE_URL)",
    "llm_live: gọi LLM API trả tiền thật — chỉ chạy thủ công, không chạy trong CI",
]
